fixed overflowing issues
fixed the issues for logins and phps

--- a/registration/style.css
+++ b/registration/style.css
@@ -1,5 +1,9 @@
 body {    
     padding-top: 0;
+    background-image: url(../landing/img/intro-bg.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 form{
@@ -7,6 +11,16 @@ form{
     position:absolute;
     margin-left: 35%;
     
+    
+}
+
+@font-face{
+    font-family: Custom;
+    src: url(MyriadPro-Regular.otf);
+}
+
+label{
+    font-family: Custom;
     
 }
 
@@ -20,6 +34,7 @@ fieldset {
     padding: 2%;
     padding-left: 3%;
     padding-bottom: 1%;
+    background-color: aliceblue ;
   
     
 }
@@ -60,24 +75,27 @@ button:hover {
 .submitbtn {
     width: 100%;
     padding: 5% ,6%;
-    background-color: greenyellow;
+    background-color: limegreen;
     
 }
 .btn{
     width: 100%;
     padding: 5% ,6%;
-    background-color: skyblue;
+    background-color: darkred;
 }
 .backbtn{
-    height: auto;
-    width: 10%;
+    height: 5%;
+    width: 4%;
     padding: 1%;
-    background-color: skyblue;
+    background-color: deepskyblue;
+    color: white;
 }
 
 .container{
-    padding-top:2%;
+    padding-top:5%;
+    padding-left: 4%;
 }
+
 
 
 
